2007-11-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GError.xs (gperl_gerror_from_sv): Fix the check for undefined
	domain keys in GError hashes.

	* GType.xs (add_interfaces): Fix the check for undefined interface
	names.

2007-11-15  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* Glib.exports: Add SvGKeyFile.  (Reported by spicy jack)

2007-11-10  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.162.

2007-10-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* AUTHORS
	* MakeHelper.pm (postamble_docs_full): When constructing the
	add_types call, make sure to properly quote the paths.  (Patch by
	Andres König)

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.161.

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* Makefile.PL: Use BEGIN { require 5.008; } instead of use 5.008;
	so automatic CPAN testers know which perl version we need.  Also
	get rid of the MY package by prefixing the relevant subs with
	`MY::´.

	* GObject.xs (Glib::Object::CLONE): Check that perl_gobjects !=
	NULL before working with it, to avoid an assertion.

2007-09-16	kaffeetisch

	* Glib.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.160.

2007-09-15	kaffeetisch

	* GKeyFile.xs
	* GMainLoop.xs
	* GUtils.xs
	* gperl.h
	* t/1.t
	* t/9.t
	* t/g.t: Change version checks to refer to glib 2.14 instead of
	2.13.

2007-08-13	kaffeetisch

	* Glib.pm
	* NEWS
	* README: Unstable release 1.153.

2007-08-13	kaffeetisch

	* GMainLoop.xs
	* GObject.xs
	* GType.xs
	* GenPod.pm: Output a warning if a type name isn't recognized by
	the doc parser.  Add 'package' and 'list' to the basic types and
	fix the remaining type name issues the new warning uncovered.

	* GenPod.pm
	* ParseXSDoc.pm: Parse preprocessor conditionals in the XS code to
	add Since: tags to methods' POD.

	* GenPod.pm